--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@sendgrid/mail": "^7.6.0",
     "bcryptjs": "^2.4.3",
     "cookie-parser": "^1.4.5",
+    "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
