--- a/package.json
+++ b/package.json
@@ -31,8 +31,8 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.0.12",
     "multer": "^1.4.3",
-    "node-schedule": "^2.1.0",
-    "uuid": "^8.3.2"
+    "nanoid": "^3.3.4",
+    "node-schedule": "^2.1.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.14"
